alignment bug

--- a/gallery.css
+++ b/gallery.css
@@ -6,6 +6,7 @@ body {
 
 .row {
     margin-bottom: 10px;
+    justify-content: center;
     
 }
 
